--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
+    "@turf/turf": "^7.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3-scale": "^4.0.2",
+    "kdbush": "^4.0.2",
     "lucide-react": "^0.528.0",
     "next": "15.4.4",
+    "rbush": "^4.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zod": "^4.0.10"
   },
   "devDependencies": {
@@ -39,6 +43,7 @@
     "@types/d3-scale": "^4.0.9",
     "@types/jest": "^30.0.0",
     "@types/node": "^24",
+    "@types/rbush": "^4.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9.32.0",
